# Krystal-stack-platform-framework

./: .gitignore  ADVANCED_COMPUTING_TECHNIQUES_README.md  ADVANCED_FRAMEWORK_DOCS.md  ADVANCED_WAVE_COMPUTING_ARCHITECTURE.md  ALGORITHMIC_RENAISSANCE_STUDY.md  APPLICATION_MANIFEST.md  ARCHITECTURE_BRAINSTORM.md  ASCII_RENDERER_README.md  BREAKTHROUGH_ARCHITECTURE.md  CHARACTERISTICS_OBJECTIVES_SUMMARY.md  CODING_SCHEME_PARADIGM.md  COMPLETE_PROJECT_SUMMARY.md  COMPONENT_SEMANTIC_RELATIONSHIPS.md  COMPREHENSIVE_AXIOMS_GENERATION_SYSTEM.md  COMPREHENSIVE_SYSTEM_DOCUMENTATION.md  COPROCESSOR_ARCHITECTURE_PLAN.md  CROSS_PLATFORM_SYSTEM_DOCS.md  Cargo.toml  ENCODER_OPENVINO_README.md  ENHANCED_TRANSMITTER_DOCS.md  EXPRESS_FRAMEWORK_SUMMARY.md  FINAL_COMPLETE_PROJECT_SUMMARY.md  FINAL_COMPLETE_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_PROJECT_CERTIFICATION.md  FINAL_PROJECT_CERTIFICATION_COMPLETE.md  FINAL_PROJECT_COMPLETION_CERTIFICATION_COMPLETE.md  FINAL_PROJECT_COMPLETION_REPORT.md  FINAL_PROJECT_COMPLETION_SUMMARY.md  FINAL_PROJECT_OVERVIEW.md  FINAL_PROJECT_SUMMARY.md  GAMESA_KRYSALSTACK_FRAMEWORK_STUDY.md  GENETIC_ALGORITHMS_DOCS.md  GENETIC_ALGORITHMS_SEMANTICS.md  GEOMETRIC_DATA_TOPOLOGY_ROADMAP.md  GEOMETRIC_TOPOLOGY_README.md  GPU_PIPELINE_COPROCESSOR_STUDY.md  GRID_MEMORY_CONTROLLER_README.md  GUARDIAN_FRAMEWORK_ARCHITECTURE.md  GUARDIAN_FRAMEWORK_README.md  (+154 more)
.github/workflows/: ci.yml
advanced_cnc_copilot/: .env  .env.example  .env.template  ALGORITHMIC_BENCHMARK_STUDY.md  BOOK_OF_PROMPTS.md  COGNITIVE_MANUFACTURING_WORKFLOW_TUTORIAL.md  COMMUNICATION_ARCHITECTURE.md  CONCEPTUAL_PROTOTYPE_EVOLUTION.md  DEPENDENCIES_REFABRICATION.md  DEPENDENCY_HIERARCHY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS_SUMMARY.md  DEVELOPMENT_ROADMAP_CONTINUED.md  DEVELOPMENT_START_REQUIREMENTS.md  DOCKER_DEPLOYMENT.md  DOCKER_PRODUCTION_DEPLOYMENT.md  DUAL_FRONTEND_INTERFACE_PLAN.md  Dockerfile  Dockerfile.api  Dockerfile.economics  Dockerfile.hal  Dockerfile.neuro-safety  Dockerfile.react  Dockerfile.security  Dockerfile.shadow-council  Dockerfile.vue  EXECUTE_AUDITOR_PROMPT.md  EXECUTIVE_SALES_DECK.md  FANUC_RISE_V21_DEPLOYMENT_COMPLETE.md  FANUC_RISE_V21_REFABRICATION_SUMMARY.md  FEATURE_IMPLEMENTATION_BLUEPRINT.md  FINAL_COMPLETION_SUMMARY.md  FINAL_DEPLOYMENT_VERIFICATION.md  FINAL_HANDOVER.md  HAL_CONFIG.md  IMPLEMENTATION_STRATEGY_PHASE2.md  INSIDER_README.md  JSON_EVIDENCE_INTEGRATION_GUIDE.md  ML_CORE_API_SPECIFICATION.md  MONITORING_AND_VALIDATION_FRAMEWORK.md  (+107 more)
advanced_cnc_copilot/alembic/: env.py
advanced_cnc_copilot/api/: manufacturing_api.py
advanced_cnc_copilot/backend/: Dockerfile  main.py  worker.py
advanced_cnc_copilot/blender_addon/: __init__.py  client.py  dependency_manager.py  interface_engine.py  live_link.py  part_factory.py  preferences.py  render_studio.py  sim_panel.py  ui_dialogs.py  ui_modes.py
advanced_cnc_copilot/cms/: auditor_agent.py  biochemist_agent.py  cognitive_link.py  cross_session_intelligence.py  digital_twin_scraper.py  dopamine_engine.py  economic_engine.py  elements_db.py  global_norms.json  hippocampus.py  interaction_supervisor.py  intervention_agent.py  knowledge_engine.py  knowledge_graph.py  llm_connector.py  llm_context_system.py  llm_gcode_generator.py  log_inspector.py  master_orchestrator.py  norm_comparator.py  observer_agent.py  perceptron_demo.py  physics_auditor.py  process_scheduler.py  protocol_conductor.py  quadratic_scanner.py  resonance_trainer.py  scheduler_agent.py  shadow_council_demo.py  solidworks_simulation_validator.py  solidworks_tf_bridge.py  spec_repository.py  swarm_brain.py  translation_adapter.py  vision_cortex.py
advanced_cnc_copilot/config/: auth_oauth_sso.py  cache_configuration.py  cicd_pipeline.py  database_production.py  pwa_configuration.py
advanced_cnc_copilot/database/: __init__.py  connection.py  (+5 more)
augmented_LLM_generator_system/: main.py
autorcredo/: FULL_CONVERSATION_LOG.md  USER_PROMPTS_ARCHIVE.md
docker/: Dockerfile  Dockerfile.backend
docs/: CONCEPTS.md  CROSS_PLATFORM.md  CRYSTAL_VINO.md  FEATURES.md  FEATURE_MAP.md  FUTURE_VISION.md  GAMESA_NEXT_WAVE.md  PERFORMANCE_PROJECTIONS.md  TECHNICAL_DEEP_DIVE.md  USE_CASES_AND_PATTERNS.md
examples/: llm_demo.py
frontend/: index.html  package.json  vite.config.js
gamesa_cortex_v2/: LINKEDIN_ARTICLE.md  README.md  build_deb.sh  setup.py
gamesa_grid_system/: README.md  main.py  run_demo.py
logs/: grid_update.jsonl  inference.jsonl  intraspectral_latest.json  planning.jsonl  policy.jsonl  runtime_log.jsonl  system.jsonl  telemetry.jsonl
nexusgrid_system/: Cargo.toml
samples/: experience_store.json  feature_definitions.json  micro_inference_rule.json  policy_proposal.json  resource_budgets.json  scale_presets.json  scaled_telemetry.json
scripts/: bootstrap.sh  verify_stack.py
src/: hex_topology.py  hyper_bus.py  neural_cortex.py  visual_optic.py
src/c/: CMakeLists.txt  gamesa_kernel.c  gamesa_kernel.h  rpg_craft_system.c  rpg_craft_system.h  thread_boost_layer.c  thread_boost_layer.h
src/c/demos/: memory_tier_demo.c  system_generator_demo.c
src/rust-bot/: Cargo.toml
src/rust-bot/src/: config.rs  cpu_governor.rs  events.rs  feature_registry.rs  gpu_telemetry.rs  grid_engine.rs  lib.rs  micro_inference.rs  policy.rs  time_series.rs  trust.rs  types.rs  unified_core.rs
test_logs/: test_output.json
tests/: test_krystal_sdk.py
v6/: control_panel.py  launcher.py  overlay_hud.py  run_hud.bat  run_tweaker.bat
(+632 files in other folders)
