[package]
name = "krystal-stack"
version = "0.1.0"
edition = "2021"
description = "GAMESA/KrystalStack - Deterministic Stream for AI-driven system optimization"
license = "MIT"

[lib]
path = "src/rust/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
