[setup]
name = Advanced Evolutionary Computing Framework
version = 1.0.0
description = Comprehensive evolutionary computing framework with cross-platform support, AI integration, and business model frameworks
author = Advanced Computing Solutions
license = MIT
url = https://github.com/advanced-computing/evolutionary-framework

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
install_requires =
    numpy>=1.21.0
    psutil>=5.8.0
    requests>=2.25.0
    scikit-learn>=1.0.0
    matplotlib>=3.3.0
    seaborn>=0.11.0
    pandas>=1.3.0
    openvino>=2024.0.0
    torch>=1.9.0
    torchvision>=0.10.0
    tensorflow>=2.6.0
    opencv-python>=4.5.0
    pillow>=8.2.0
    flask>=2.0.0
    django>=4.0.0
    celery>=5.1.0
    redis>=4.0.0
    sqlalchemy>=1.4.0
    alembic>=1.7.0
    pytest>=6.2.0
    pytest-asyncio>=0.15.0
    coverage>=5.5.0
    sphinx>=4.0.0
    sphinx-rtd-theme>=0.5.0
    black>=21.0.0
    flake8>=3.9.0
    mypy>=0.910
    pre-commit>=2.13.0
    setuptools>=50.0.0
    wheel>=0.37.0
    pip>=21.0.0
    virtualenv>=20.4.0

[options.extras_require]
dev =
    pytest>=6.2.0
    pytest-cov>=2.12.0
    pytest-mock>=3.6.0
    pytest-asyncio>=0.15.0
    flake8>=3.9.0
    black>=21.0.0
    mypy>=0.910
    pre-commit>=2.13.0
    tox>=3.24.0
    sphinx>=4.0.0
    sphinx-rtd-theme>=0.5.0
gpu =
    cupy>=9.0.0
    nvidia-ml-py3>=11.450.51
    pycuda>=2021.1
visualization =
    plotly>=5.0.0
    dash>=2.0.0
    bokeh>=2.4.0
web =
    flask>=2.0.0
    django>=4.0.0
    fastapi>=0.68.0
    uvicorn>=0.15.0
cloud =
    boto3>=1.18.0
    google-cloud-storage>=1.42.0
    azure-storage-blob>=12.8.0
    docker>=5.0.0

[options.package_data]
* = *.md, *.txt, *.json, *.yaml, *.yml, configs/*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    evolutionary-framework = evolutionary_framework.main:main
    ef-setup = evolutionary_framework.setup:setup_main
    ef-analyze = evolutionary_framework.analysis:analyze_main
    ef-optimize = evolutionary_framework.optimization:optimize_main
    ef-monitor = evolutionary_framework.monitoring:monitor_main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude = .git, __pycache__, build, dist, *.egg-info

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[tool:pytest]
testpaths = tests
addopts = -v --tb=short
python_files = test_*.py
python_classes = Test*
python_functions = test_*
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    gpu: marks tests that require GPU
    integration: marks tests as integration tests