[package]
name = "gamesa-rust-bot"
version = "0.1.0"
edition = "2021"
description = "GAMESA Rust Bot - Trusted Decision/Telemetry Engine"
authors = ["GAMESA Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "gamesa_bot"
path = "src/lib.rs"

[[bin]]
name = "gamesa-bot"
path = "src/bin/main.rs"
